# PyMindAffectBCI

./: .gitignore  README.md  pyproject.toml
scripts/: README.md
scripts/dev/: build_package.sh  commit-modernization.sh
src/mindaffectBCI/: __init__.py  noisetag.py  online_bci.py
src/mindaffectBCI/acquisition/: CytonWithTimeStamps.py  utopia_brainflow.py  utopia_cyton.py  utopia_fakedata.py  utopia_ganglion.py  utopia_lsl.py  utopia_wifi.py
src/mindaffectBCI/decoder/: FileProxyHub.py  UtopiaDataInterface.py  decoder.py  devent2stimsequence.py  linear_trend_tracker.py  lower_bound_tracker.py  timestamp_check.py  trigger_check.py
src/mindaffectBCI/decoder/offline/: read_mindaffectBCI.py
src/mindaffectBCI/output/: outputTutorial.py  utopia2harmony.py
src/mindaffectBCI/presentation/: selectionMatrix.py  tictactoe.py
src/mindaffectBCI/resources/: __init__.py
src/mindaffectBCI/stimulus/: __init__.py
src/mindaffectBCI/utopia/: __init__.py  utopiaController.py
tests/: conftest.py  test_hierarchy.py  test_imports.py  test_noisetag.py
